added the docs for demo

--- a/library_management/library_management/doctype/article/templates/article_row.html
+++ b/library_management/library_management/doctype/article/templates/article_row.html
@@ -16,4 +16,9 @@
 {%- endif -%}
 	</div>
 	</div>
-	
+	<script>
+		document.querySelectorAll('.page-breadcrumbs').forEach(element => {
+    element.remove();
+});
+
+	</script>
